--- a/Test/css/style.css
+++ b/Test/css/style.css
@@ -18,42 +18,30 @@ h1 {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border: 1px solid #000;
-  background-color: #ccc;
+  background-color: darkgray;
   font-family: helvetica, arial;
-  color: gray;
+  color: darkslategrey;
 }
 
 .answer {
   width: 100%;
-  margin: 0;
+  margin: 0 0 10px 0;
   padding: 10px 0;
+  list-style-type: none;
 }
 
-.answer-variant {
-  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  list-style-type: none;
-  border: 1px solid #000;
-  height: 40px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 7px 13px 5px;
-  letter-spacing: 0.7px;
-  border-radius: 5px;
+.btn-next {
+  margin-left: 140px;
+  width: 110px;
+  height: 35px;
+  background-color: ghostwhite;
+  font-size: 16px;
+  letter-spacing: 0.5px;
   cursor: pointer;
+  border-radius: 6px;
 }
-.answer-variant:not(:last-child) {
-  margin-bottom: 2px;
-}
-.answer-variant:hover {
-  background-color: green;
-  color: #fff;
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-  -webkit-transition: background-color, -webkit-transform 0.3s ease;
-  transition: background-color, -webkit-transform 0.3s ease;
-  transition: background-color, transform 0.3s ease;
-  transition: background-color, transform 0.3s ease, -webkit-transform 0.3s ease;
+.btn-next:hover {
+  background-color: #fff;
 }
 
 .result {
