--- a/Test/source/scss/style.scss
+++ b/Test/source/scss/style.scss
@@ -17,36 +17,51 @@ h1 {
     height: 65px;
     box-sizing: border-box;
     border: 1px solid #000;
-    background-color: #ccc;
+    background-color: darkgray;
     font-family: helvetica, arial;
-    color: gray;
+    color: darkslategrey;
 }
 
 .answer {
     width: 100%;
-    margin: 0;
+    margin: 0 0 10px 0;
     padding: 10px 0;
+    list-style-type: none;
 }
 
 .answer-variant {
-    box-shadow: 0 0 5px rgba(0,0,0,0.5);
-    list-style-type: none;
-    border: 1px solid #000;
-    height: 40px;
-    box-sizing: border-box;
-    padding: 7px 13px 5px;
-    letter-spacing: 0.7px;
-    border-radius: 5px;
-    cursor: pointer;
+    // box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    // list-style-type: none;
+    // border: 1px solid #000;
+    // height: 40px;
+    // box-sizing: border-box;
+    // padding: 7px 13px 5px;
+    // letter-spacing: 0.7px;
+    // border-radius: 5px;
+    // cursor: pointer;
+    //
+    // &:not(:last-child) {
+    //     margin-bottom: 2px;
+    // }
+    // &:hover {
+    //     background-color: green;
+    //     color: #fff;
+    //     transform: scale(1.05);
+    //     transition: background-color,transform  .3s ease;
+    // }
+}
 
-    &:not(:last-child) {
-        margin-bottom: 2px;
-    }
+.btn-next {
+    margin-left: 140px;
+    width: 110px;
+    height: 35px;
+    background-color: ghostwhite;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    border-radius: 6px;
     &:hover {
-        background-color: green;
-        color: #fff;
-        transform: scale(1.05);
-        transition: background-color,transform  .3s ease;
+        background-color: #fff;
     }
 }
 
